--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
   <title>Luis y Sara</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="bandera.ico">
 </head>
 <body>
   <app-root></app-root>
